# somav2

./: .gitignore  DEMO_REPORT.txt  LICENSE  README.md  README_V2.md  benchmark.py  benchmark_stress_v2.py  demo.py  demo_multiagent.py  example_quickstart.py  generate_academic_architecture.py  generate_granular_architectures.py  generate_v2_architecture.html  generate_v2_architecture_diagram.py  pyproject.toml  requirements.txt  run_benchmark.bat  server.py  soma_serve.py  soma_v2_architecture_explorer.html  soma_v2_architecture_simulator.html  soma_v2_dashboard.html  soma_v2_kernel_playground.html  test_soma.py
examples/: a2a_recovery_demo.py  airsim_conflict_negotiation.py  airsim_demo.py  airsim_multi_agent.py  airsim_multi_drone.py  airsim_multi_drone_demo.py  hitl_demo.py  ollama_live_demo.py
media/: architecture.md  soma_v2_battle_dashboard.html
paper/: architecture_diagram.html  main.tex
sample_mission_data/: chroma.sqlite3
sample_mission_data/traces/: trace_1776586890.jsonl
scratch/: actuator_demo.py  adversarial_stress.py  benchmark_negotiation_latency.py  benchmark_session.py  benchmark_thundering_herd.py  cold_start_curve.py  demo.py  domain_pivot_test.py  generate_arch_diagram.py  hyper_task_battle.py  multimodel_test.py  negotiation_test.py  novel_task_stream.py  plot_competitor_results.py  real_battle.py  real_competitor_battle.py  rigorous_competitor_battle.py  saturation_sweep.py  semaphore_sweep.py  smoke_test.py  soma_showcase.py  specialization_test.py  test_api.py  test_tools_v2.py  thundering_herd.py  ultimate_battle_royale.py  validate_consistency.py  verify_bus_fix.py  verify_injection.py  warm_cache_test.py
scripts/: generate_sample_traces.py  mission_report.py  verify_persistence.py  verify_telemetry.py
soma_cache/: chroma.sqlite3
soma_cache/25172e10-ad3e-422e-846c-17d940a1145a/: index_metadata.pickle
soma_demo_memory/: chroma.sqlite3
soma_memory/: chroma.sqlite3
soma_multiagent_memory/: chroma.sqlite3
src/soma_v2/: __init__.py  connectors.py  main.py
src/soma_v2/agents/: deliberative.py  reactive.py  routing.py
src/soma_v2/api/: server.py
src/soma_v2/core/: a2a.py  actuators.py  blackboard.py  broker.py  depth_classifier.py  director.py  kernel.py  negotiation.py  planner.py  telemetry.py  tools.py
src/soma_v2/memory/: cold.py  hierarchical.py  hot.py
static/: app.js  index.html  styles.css
test_soma_memory/: chroma.sqlite3
test_telemetry_data/: chroma.sqlite3
test_telemetry_data/traces/: trace_1776585857.jsonl
