[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-v2"
version = "2.0.0"
description = "SOMA V2 — Memory-augmented, negotiation-aware OS for autonomous drone swarms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "SOMA V2 Research Team" }
]

keywords = [
    "multi-agent systems", "swarm robotics", "LLM agents",
    "semantic caching", "autonomous drones", "agentic OS"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "scikit-learn>=1.4.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
plots = [
    "matplotlib>=3.8.0",
]

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/urban-swarm-os-v2"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
