[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-v2"
version = "2.0.0"
description = "A Heterogeneous Multi-Agent Kernel with Semantic Plan Memoization"
authors = [
    { name = "Urban Swarm Research Group", email = "research@urban-swarm.io" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "scipy>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/urban-swarm-os/soma-v2"
Documentation = "https://github.com/urban-swarm-os/soma-v2/wiki"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soma_v2*"]
