[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-v2"
version = "2.0.0"
description = "A Heterogeneous Multi-Agent Kernel with Semantic Plan Memoization — OpenAI-native"
authors = [
    { name = "Urban Swarm Research Group", email = "research@urban-swarm.io" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "scipy>=1.10.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/bilal-ahmed-khan7412/somav2"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soma_v2*"]
